# impact-split

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: README.md  mkdocs.yml
docs/docs/: getting-started.md  index.md
impact_split/: __init__.py  config.py  dataset.py  features.py  plots.py  splitter.py
impact_split/modeling/: predict.py  train.py
notebooks/: 1.0-jde-impact-split-explainer.ipynb  2.0-jde-supermarket-kaggle-trace.ipynb  3.0-validation-benchmark-executed.ipynb  3.0-validation-benchmark.ipynb
reports/: validation-report.md
tests/: conftest.py  test_impact_splitter.py  test_interactive_plots.py
