[build-system]
requires = ["flit_core >=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "impact_split"
version = "0.0.1"
description = "A tree based approach to determine the driver of a KPI"
authors = [
  { name = "Juedi Myro Eugenio" },
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
keywords = ["eda", "kpi", "decision-tree", "segmentation", "impact-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = "~=3.13.0"
dependencies = [
    "loguru",
    "matplotlib",
    "numpy",
    "pandas",
    "python-dotenv",
    "tqdm",
    "typer",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "build",
    "mypy",
    "pytest",
    "ruff",
    "twine",
]

[project.urls]
Homepage = "https://github.com/juedimyroeugenio/impact-split"
Documentation = "https://juedimyroeugenio.github.io/impact-split/"
Repository = "https://github.com/juedimyroeugenio/impact-split"
Issues = "https://github.com/juedimyroeugenio/impact-split/issues"


[tool.ruff]
line-length = 99
src = ["impact_split"]
include = ["pyproject.toml", "impact_split/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["impact_split"]
force-sort-within-sections = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

