[build-system]
requires = ["flit_core >=3.12,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "impact_split"
version = "0.0.1"
description = "A tree based approach to determine the driver of a KPI"
authors = [
  { name = "Juedi Myro Eugenio" },
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
keywords = ["eda", "kpi", "decision-tree", "segmentation", "impact-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
requires-python = "~=3.13.0"
dependencies = [
    "loguru",
    "matplotlib",
    "numpy",
    "pandas",
    "python-dotenv",
    "tqdm",
    "typer",
]

[project.optional-dependencies]
dev = [
    "bandit",
    "build",
    "flit_core>=3.12,<4",
    "mypy",
    "pandas-stubs",
    "pytest",
    "ruff",
    "twine",
]

[project.urls]
Homepage = "https://github.com/juedimyroeugenio/impact-split"
Documentation = "https://juedimyroeugenio.github.io/impact-split/"
Repository = "https://github.com/juedimyroeugenio/impact-split"
Issues = "https://github.com/juedimyroeugenio/impact-split/issues"


[tool.ruff]
line-length = 99
src = ["impact_split"]
include = ["pyproject.toml", "impact_split/**/*.py"]

[tool.ruff.lint]
# I: isort; UP: pyupgrade; B: bugbear; SIM: simplify
extend-select = ["I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["impact_split"]
force-sort-within-sections = true

[tool.mypy]
python_version = "3.13"
packages = ["impact_split"]
warn_unused_ignores = true
show_error_codes = true
strict = false
# Third-party libs ship incomplete stubs; avoid blocking CI on their gaps.
[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "loguru",
    "tqdm",
    "typer",
    "ipykernel.*",
    "IPython.*",
    "ipywidgets.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

